--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Programação de Jogos</title>
+    <title>Academia de Jogos</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-white text-dark">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo do Curso de Programação de Jogos" class="img-fluid" style="max-width: 100px;"></a>
+        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo da Academia de Jogos" class="img-fluid" style="max-width: 100px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +22,7 @@
         </div>
     </nav>
     <header class="header text-center py-5">
-        <h1>Bem-vindo ao Curso de Programação de Jogos</h1>
+        <h1>Bem-vindo à Academia de Jogos</h1>
         <p>Explore os melhores cursos de desenvolvimento de jogos com os melhores profissionais do mercado.</p>
         <a href="#" class="btn btn-primary">Saiba Mais</a>
     </header>
@@ -70,6 +70,9 @@
             </div>
         </div>
     </section>
+    <footer class="bg-light text-center py-3">
+        <p>&copy; 2024 Academia de Jogos. Todos os direitos reservados.</p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -88,6 +91,10 @@
                 navbar.classList.toggle('bg-dark');
                 navbar.classList.toggle('navbar-light');
                 navbar.classList.toggle('bg-light');
+            });
+            document.querySelectorAll('footer').forEach(function(footer) {
+                footer.classList.toggle('bg-light');
+                footer.classList.toggle('bg-dark');
             });
         });
     </script>
